--- a/AirMonitor/AirMonitor/App.xaml
+++ b/AirMonitor/AirMonitor/App.xaml
@@ -7,6 +7,8 @@
              x:Class="AirMonitor.App">
     <Application.Resources>
         <ResourceDictionary>
+            <Color x:Key="App_InfoColor">#33f069</Color>
+            
             <!-- Zadanie 1.2 -->
             <Style x:Key="frameStyling" TargetType="Frame">
                 <Setter Property="CornerRadius" Value="50"></Setter>
@@ -16,8 +18,8 @@
                 <Setter Property="HeightRequest" Value="100"></Setter>
                 <Setter Property="WidthRequest" Value="100"></Setter>
                 <Setter Property="HasShadow" Value="False"></Setter>
-                <Setter Property="BackgroundColor" Value="#33f069"></Setter>
                 <Setter Property="BorderColor" Value="Red"></Setter>
+                <Setter Property="BackgroundColor" Value="{StaticResource App_InfoColor}"></Setter>
             </Style>
             <Style x:Key="centeredLabel" TargetType="Label">
                 <Setter Property="HorizontalOptions" Value="Center"></Setter>
@@ -68,13 +70,14 @@
                 <Setter Property="TextColor" Value="Black"></Setter>
                 <Setter Property="FontAttributes" Value="Bold"></Setter>
             </Style>
+            <!-- Zadanie 1.3 -->
             <Style x:Key="city" TargetType="Span">
                 <Setter Property="FontSize" Value="12"></Setter>
                 <Setter Property="TextColor" Value="Blue"></Setter>
             </Style>
-            <Style x:Key="humility" TargetType="Slider">
-                
-            </Style>
+            
+            
+            
         </ResourceDictionary>
     </Application.Resources>
 </Application>
