--- a/AirMonitor/AirMonitor/Views/HomePage.xaml
+++ b/AirMonitor/AirMonitor/Views/HomePage.xaml
@@ -3,10 +3,27 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AirMonitor.Views.HomePage"
              Title="Home Page">
+
+    <Grid>
+        <ListView ItemsSource="{Binding Items}" ItemTapped="ListView_ItemTapped" SelectionMode="None">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextCell Text="{Binding Installation.Address.City}"
+                              Detail="{Binding CurrentDisplayValue, StringFormat='CAQI: {0}'}"/>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+        <ActivityIndicator IsRunning="{Binding IsLoading}" IsVisible="{Binding IsLoading}" HorizontalOptions="Center" VerticalOptions="Center"/>
+    </Grid>
+    
+    
+    <!--
     <Button
         Text="Go to details"
         HorizontalOptions="Center"
         VerticalOptions="Center"
         Command="{Binding GoToDetailsCommand}"
         />
+    -->
+    
 </ContentPage>
