--- a/AirMonitor/AirMonitor/Views/HomePage.xaml
+++ b/AirMonitor/AirMonitor/Views/HomePage.xaml
@@ -9,7 +9,7 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <TextCell Text="{Binding Installation.Address.Description}"
-                              Detail="{Binding CurrentDisplayValue, StringFormat='CAQI: {0} \n Location: {1}'}"/>
+                              Detail="{Binding CurrentDisplayValue, StringFormat='CAQI: {0}'}"/>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
